# nnshit-rs

./: .gitignore  Cargo.toml
src/: main.rs  mnist.rs
src/network/: layer.rs  mod.rs
src/network/misc/: activation.rs  classifier.rs  cost.rs  mod.rs
