[package]
name = "nnshit_rust"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 2
opt-level = 3
lto = "thin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0.24", default-features = false, features = ["zlib-ng-compat"] }
itertools = "0.10.3"
rand = "0.8.5"
rand_distr = "0.4.3"

ndarray = { version = "0.15.6", features = ["blas", "matrixmultiply-threading", "rayon", "serde"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10.4", features = ["cblas", "system"] }
mnist = { version = "0.5.0", features = ["download"] }
